Changes for 1.3.3.0
* Changed some string comparing from == and != to .equals() and !.equals(). (veqryn)

* Created new rules attachment, placementAnySeaZone, that allows placing sea units beside any land territory owned at the beginning of the turn. (veqryn)

* Fixing bugs in old victory conditions and moving them to endRoundDelegate, and also fixing bugs surrounding strings in attachment property change triggers. (veqryn)

* Adding PactOfSteel2 and Pac40 xmls to test xml suite. (veqryn)

* Changed destroyedWhenCapturedBy to allow destroying when capturing from a player, not just by a player, by adding a prefix of "BY:" or "FROM:" and also created destroyedWhenCapturedFrom which calls destroyedWhenCapturedBy with a "FROM:" prefix. (veqryn)

* Changed unitAttachment toString to be much more informative, and include all values. (veqryn)

* Created new Relationship attachments for canMoveLandUnitsOverOwnedLand and canMoveAirUnitsOverOwnedLand, and set them to validate movement. (veqryn)

* Allowed conditionType for both triggers and conditions (objectives) attachments to have integer values, in addition to other values,
  conditionType now allowing: 'AND' or 'OR' or 'XOR' or 'y' or 'y-z' where Y and Z are valid positive integers and Z is greater than Y. (veqryn)

* Allowing html to be used for both triggered notifications and for triggered victory messages. (veqryn) 

* Added ability for the defender to capture units if it wins on defense and the attacker brought capturable infrastructure units to the battle. (veqryn)

* Fixing bug in moving defending air to land when a carrier is damaged on defense. (veqryn)

* Fixing bugs surrounding unitsMayNotLandOnCarrier and unitsMayNotLeaveAlliedCarrier interacting with each other. (veqryn)

* Updated whenCombatDamaged to work with unitsMayNotLeaveAlliedCarrier. (veqryn)

* Updated whenCombatDamaged to work with unitsMayNotLandOnCarrier. (veqryn)
